# codex-manager

./: .gitignore  CLAUDE.md  TODOLIST.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  update_oauth.patch  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
server/: index.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: openai_compat_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/accounts/: AccountLabelEditor.tsx  AddAccountDialog.tsx  AnthropicProxyCard.tsx  PlanBadge.tsx
src/components/layout/: Layout.tsx
src/pages/: AICachePage.tsx  AccountsPage.tsx  OpenAICompatProxyPage.tsx
src/services/: accountService.ts
src/stores/: useAccountStore.ts
src/types/: account.ts
