[package]
name = "codex-manager"
version = "1.0.0"
edition = "2021"

[lib]
name = "codex_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }

# OAuth PKCE
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "default-tls"], default-features = false }
rand = "0.8"
sha2 = "0.10"
open = "5"
percent-encoding = "2"
chrono = { version = "0.4", features = ["serde"] }

# API reverse proxy
axum = "0.7"
futures-util = "0.3"
tauri-plugin-shell = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
bytes = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
